--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,8 @@
   
     .button-group button {
       width: 100%;
+      margin-bottom: 10px;
+      height: 50px;
     }
   }
 /*-------------------------------------------------------------------------------------------Menu*/
